--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en" translate="no">
 
 <head>
+  <script src="https://use.fontawesome.com/cddf368f5b.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="./styles/list.css">
+  <link rel="stylesheet" href="/public/styles/style.css">
+  <link rel="stylesheet" href="/public/styles/list.css">
   <title>JustPlay</title>
 </head>
 
@@ -32,7 +33,7 @@
           <i class="fa fa-step-forward fa-2x"></i>
         </div>
         <div class="repeat-track">
-          <i class="fa fa-redo""></i>
+          <i class="fa fa-repeat"></i>
         </div>
       </div>
 
@@ -44,8 +45,11 @@
 
       <div class="slider_container">
         <i class="fa fa-volume-down"></i>
-        <input type="range" min="1" max="100" value="50" class="volume_slider">
+        <input type="range" min="0" max="100" value="50" class="volume_slider">
         <i class="fa fa-volume-up"></i>
+      </div>
+      <div>
+        <i class="fa-fa-volume-mute"></i>
       </div>
     </div>
     <div class="player-list">
@@ -58,8 +62,7 @@
     </div>
   </div>
 
-  <script src="../src/main.js">
-  
+  <script src="/src/main.js">
     const load = () => {
       startApplication(document);
     }
