GH Pages file remove (check)

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-  <link rel="stylesheet" href="/public/styles/style.css">
-  <link rel="stylesheet" href="/public/styles/list.css">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/list.css">
   <title>JustPlay</title>
 </head>
 
@@ -62,7 +62,7 @@
     </div>
   </div>
 
-  <script src="/src/main.js">
+  <script src="/main.js">
     const load = () => {
       startApplication(document);
     }
