Add shuffle + visual

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" translate="no">
 
 <head>
-  <!-- <script src="https://use.fontawesome.com/cddf368f5b.js"></script> -->
+  <script src="https://use.fontawesome.com/cddf368f5b.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -34,6 +34,9 @@
         </div>
         <div class="repeat-track">
           <i class="fa fa-repeat"></i>
+        </div>
+        <div class="shuffle">
+          <i class="fa fa-random"></i>
         </div>
       </div>
 
